# mouselink

./: .gitignore  LICENCSE  README.md  build-and-test.bat  pyproject.toml
examples/: read_and_echo.py
mouselink/: __init__.py  comms.py  mouselink.py  pack.py  transmit.py
sb3/: ev3_v1.0.1.sb3  ev3_v1.0.2_p_autostart.sb3  ev3_v1.0.2_p_runtime.sb3  ev3_v1.0.2_quickstart.sb3  ev3_v1.0.2_s_autostart.sprite3  ev3_v1.0.2_s_runtime.sprite3
src/: test.py
src/mouselink/: __init__.py  comms.py  mouselink.py  pack.py  test.py
tests/: eee.py
util/: gen_encodings.py  microbit.py
