[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
dependencies = [
    "websockets==15.0.1"
]
name = "TBD"
version = "0.0.1"
authors = [
  { name="minniesBaa", email="TBA" },
]
description = "Python project that emulates Scratch Link, and allows communication between Scratch and Python."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "TBA"
Issues = "TBA"